--- a/00-Python Object and Data Structure Basics/02-Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/02-Strings.ipynb
@@ -299,14 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign s as a string\n",
-    "s = 'Hello World'"
+    "s = 'Hello World'\n",
+    "print(s[1])"
    ]
   },
   {
@@ -696,22 +705,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello World'"
+       "'Pam'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "s\n",
+    "name = \"Sam\"\n",
+    "last_letters = name[1:]\n",
+    "'P' + last_letters"
    ]
   },
   {
@@ -793,13 +805,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['www', 'hoopla', 'com']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "letter = 'z'"
+    "letter = 'z'\n",
+    "letter = 'www.hoopla.com'\n",
+    "letter.split('.')"
    ]
   },
   {
@@ -982,6 +1007,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fox brown quick\n",
+      "The quick  brown  fox\n",
+      "The quick  brown  fox\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The {} {} {}'.format('fox', 'brown', 'quick')) \n",
+    "print('The {2}  {1}  {0}'.format('fox', 'brown', 'quick'))\n",
+    "print('The {q}  {b}  {f}'.format(f='fox', b='brown',q='quick'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Float Formatting\n",
+    "We can use float formatting to make a cool thing where \"{value:width.precision <i>f</i>}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = 100/777"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1287001287001287"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result was 0.129\n",
+      "The result was      0.129\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The result was {r:1.3f}\".format(r=result))\n",
+    "#Here's an exmaple of white space padding\n",
+    "print(\"The result was {r:10.3f}\".format(r=result))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -998,7 +1101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
