--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formatting with placeholders\n",
+    "## Formatting with placeholders (THIS IS AN OLD METHOD)\n",
     "You can use <code>%s</code> to inject strings into your print statements. The modulo `%` is referred to as a \"string formatting operator\"."
    ]
   },
@@ -702,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
