- Finished with Guessing Game Commit on PC

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,12 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "num = random.randint(1,100)\n",
+    "print(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!, we are going to be playing a game /n the rules are simple, you will guess for a number and if you are close I will let you know until you guess the right number!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello!, we are going to be playing a game /n the rules are simple, you will guess for a number and if you are close I will let you know until you guess the right number!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,12 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "guesses = [0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,15 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "while True:\n",
+    "    guess = int(input('Enter your guess'))\n",
     "    \n",
-    "    pass"
+    "    if guess < 1 or guess > 100:\n",
+    "        print('OUT OF BOUNDS! Please try again: ')\n",
+    "        continue\n",
+    "    \n",
+    "    break"
    ]
   },
   {
@@ -122,15 +151,157 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warm!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "COLDER\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "COLDER\n",
+      "WARMER!\n",
+      "COLDER\n",
+      "WARMER!\n",
+      "COLDER\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "COLDER\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "CONGRATULATIONS, you GUESSED IT IN ONLY 18 GUESSES!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "guesses = [0]\n",
+    "while True:\n",
+    "    guess = int(input('Enter your guess'))\n",
+    "    ## ensure that the guess is valid\n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print('OUT OF BOUNDS! Please try again: ')\n",
+    "        continue\n",
+    "    \n",
+    "    # if guess == \n",
+    "    if guess == num:\n",
+    "        print(f'CONGRATULATIONS, you GUESSED IT IN ONLY {len(guesses)} GUESSES!!')\n",
+    "        break\n",
+    "    ## add guess to guesslist\n",
+    "    guesses.append(guess)\n",
+    "    \n",
+    "    ##Begin evaluation\n",
+    "    if guesses[-2]:\n",
+    "        if abs(guesses[-2] - num) > abs(guess - num):\n",
+    "            print('WARMER!')\n",
+    "        else:\n",
+    "            print('COLDER')\n",
+    "            \n",
+    "    else:\n",
+    "        if abs(guess - num) <= 10:\n",
+    "            print('Warm!')\n",
+    "        else:\n",
+    "            print('Cold!')\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      5\u001b[0m guessDelta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 6\u001b[0m guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEnter your first guess\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m guessDelta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mabs\u001b[39m(num \u001b[38;5;241m-\u001b[39m guess)\n\u001b[0;32m      8\u001b[0m message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "## Initialize variables\n",
+    "count = 0 \n",
+    "guesslist = []\n",
+    "guess = 0\n",
+    "guessDelta = 0\n",
+    "guess = int(input('Enter your first guess'))\n",
+    "guessDelta = abs(num - guess)\n",
+    "message = ''\n",
+    "## run a script to account for the first guess\n",
+    "while guessDelta <= 10:\n",
+    "    \n",
+    "    if count == 0 and guessDelta <= 10:\n",
+    "        message = 'WARM!'\n",
+    "    elif count == 0 and guessDelta > 10:\n",
+    "        message = 'COLD!'\n",
+    "    else: \n",
+    "        message = 'Doh'\n",
+    "\n",
+    "    count += 1\n",
+    "    guess = int(input(f'{message}'))\n",
+    "    break  \n",
+    "    ## Get our first input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      3\u001b[0m     \n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m## Get the input and store the value\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 6\u001b[0m         guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEnter your guess\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      8\u001b[0m         guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mve guessed \u001b[39m\u001b[38;5;132;01m{count}\u001b[39;00m\u001b[38;5;124m time(s), you are \u001b[39m\u001b[38;5;132;01m{distance}\u001b[39;00m\u001b[38;5;124m, try again!\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1202\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1200\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1201\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1202\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1203\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1204\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1205\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1206\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1207\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1245\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1242\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1243\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1244\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1245\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1246\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1247\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
    "source": [
+    "count = 0\n",
     "while True:\n",
-    "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
+    "    \n",
+    "    ## Get the input and store the value\n",
+    "    if count == 0:\n",
+    "        guess = int(input('Enter your guess'))\n",
+    "    else:\n",
+    "        guess = int(input(\"You've guessed {count} time(s), you are {distance}, try again!\"))\n",
+    "    ## initialize a list to store the guesses in. \n",
+    "    guesslist = []\n",
+    "    ## Append the guesses to the guess list. \n",
+    "    guesslist.append(guess)\n",
+    "    ## calculate the delta\n",
+    "    firstguessdelta = num - guess\n",
+    "    if abs(firstguessdelta) >= 10:\n",
+    "        distance = 'colder'\n",
+    "    else: \n",
+    "        distance = 'warmer'\n",
+    "    \n",
+    "    lastguess = guesslist[-2]\n",
+    "    guessdelta = guess - lastguess\n",
+    "    if abs(guessdelta) >= 10:\n",
+    "        distance = 'colder'\n",
+    "    else:\n",
+    "        distance = 'warmer'\n",
+    "    print(guesslist)\n",
+    "    count +0\n",
     "    pass"
    ]
   },
@@ -153,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
