--- a/02-Python Statements/02-if, elif, and else Statements.ipynb
+++ b/02-Python Statements/02-if, elif, and else Statements.ipynb
@@ -186,6 +186,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is poop\n"
+     ]
+    }
+   ],
+   "source": [
+    "plan = 'Poop'\n",
+    "\n",
+    "if plan == 'Dogshit':\n",
+    "    print('this is dogshit')\n",
+    "else: \n",
+    "    print('this is poop')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
