--- a/02-Python Statements/06-List Comprehensions.ipynb
+++ b/02-Python Statements/06-List Comprehensions.ipynb
@@ -150,23 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[32.0, 50.0, 68.18, 94.1]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Convert Celsius to Fahrenheit\u001b[39;00m\n\u001b[0;32m      2\u001b[0m celsius \u001b[38;5;241m=\u001b[39m [(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m),(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m),(\u001b[38;5;241m34\u001b[39m,\u001b[38;5;241m0\u001b[39m)]\n\u001b[1;32m----> 4\u001b[0m fahrenheit \u001b[38;5;241m=\u001b[39m \u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtemp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcelsius\u001b[49m\u001b[43m \u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      6\u001b[0m fahrenheit\n",
+      "Cell \u001b[1;32mIn[14], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Convert Celsius to Fahrenheit\u001b[39;00m\n\u001b[0;32m      2\u001b[0m celsius \u001b[38;5;241m=\u001b[39m [(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m),(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m),(\u001b[38;5;241m34\u001b[39m,\u001b[38;5;241m0\u001b[39m)]\n\u001b[1;32m----> 4\u001b[0m fahrenheit \u001b[38;5;241m=\u001b[39m [(\u001b[43m(\u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtemp\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m32\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m celsius ]\n\u001b[0;32m      6\u001b[0m fahrenheit\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
+     ]
     }
    ],
    "source": [
     "# Convert Celsius to Fahrenheit\n",
-    "celsius = [0,10,20.1,34.5]\n",
+    "celsius = [(0,1),(10,20),(34,0)]\n",
     "\n",
     "fahrenheit = [((9/5)*temp + 32) for temp in celsius ]\n",
     "\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +194,7 @@
        "[0, 1, 16, 81, 256, 625, 1296, 2401, 4096, 6561, 10000]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
