--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -42,13 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "# ret = [s for s in st if s == 's']\n",
+    "for s in st.split():\n",
+    "    if s[0] == 's':\n",
+    "        print(s)  \n",
+    "# ret\n",
+    "# st.split('is')\n",
+    "        \n"
    ]
   },
   {
@@ -61,13 +78,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "for num in range(1,11):\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n",
+    "        \n",
+    "list(range(0,11,2))"
    ]
   },
   {
@@ -80,14 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "[s for s in range(0,51) if s % 3 == 0]"
    ]
   },
   {
@@ -100,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -111,13 +166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word<--- This is Even\n",
+      "in<--- This is Even\n",
+      "this<--- This is Even\n",
+      "sentence<--- This is Even\n",
+      "that<--- This is Even\n",
+      "an<--- This is Even\n",
+      "even<--- This is Even\n",
+      "number<--- This is Even\n",
+      "of<--- This is Even\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "['even!' for word in st.split() if len(word) % 2 == 0]\n",
+    "for word in st.split():\n",
+    "    if len(word) % 2 == 0:\n",
+    "        print(word+'<--- This is Even')"
    ]
   },
   {
@@ -130,13 +205,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FizzBuzz\n",
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "5\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "10\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "20\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "25\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "35\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "40\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "FizzBuzz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "50\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "55\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "FizzBuzz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "65\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "70\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "FizzBuzz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "80\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "85\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "FizzBuzz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "95\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "s = 0\n",
+    "while s < 101:\n",
+    "    if s % 3 == 0 and s % 5 == 0:\n",
+    "        print('FizzBuzz')    \n",
+    "    elif s % 3 == 0:\n",
+    "        print('Fizz')\n",
+    "    elif s % 5 == ('Buzz'):\n",
+    "        print('Buzz')\n",
+    "    else:\n",
+    "        print(s)\n",
+    "    s += 1\n",
+    "        "
    ]
   },
   {
@@ -149,13 +344,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "st = 'Create a list of the first letters of every word in this string'"
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "[s[0] for s in st.split()]"
    ]
   },
   {
@@ -179,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
