--- a/03-Methods and Functions/01-Methods.ipynb
+++ b/03-Methods and Functions/01-Methods.ipynb
@@ -32,14 +32,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a simple list\n",
-    "lst = [1,2,3,4,5]"
+    "lst = [1,2,3,4,5]\n",
+    "lst.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function insert:\n",
+      "\n",
+      "insert(index, object, /) method of builtins.list instance\n",
+      "    Insert object before index.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst.insert\n",
+    "help(lst.insert)"
    ]
   },
   {
@@ -171,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
